[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Menu/Desktop.gd" type="Script" id=1]
[ext_resource path="res://Images/Menu/taskbar_glow.tex" type="Texture" id=2]
[ext_resource path="res://Scenes/Menu/ClockWidget.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Menu/MenuBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Menu/OptionBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Menu/TaskBar.tscn" type="PackedScene" id=6]

[node name="Desktop" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Material" ]

[node name="TaskbarGlow" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -53.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="ClockWidget" parent="." index="1" instance=ExtResource( 3 )]

modulate = Color( 1, 1, 1, 0.801098 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -97.0
margin_right = 79.0
margin_bottom = 70.0
rect_scale = Vector2( 0.5, 0.5 )
_sections_unfolded = [ "Margin", "Visibility" ]

[node name="Windows" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="MenuBox" parent="Windows" index="0" instance=ExtResource( 4 )]

anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 265.0
margin_right = -228.0
margin_bottom = 0.0
rect_clip_content = true
_sections_unfolded = [ "Margin", "Rect" ]

[node name="OptionBox" parent="Windows" index="1" instance=ExtResource( 5 )]

anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 345.0
margin_right = -148.0
margin_bottom = 0.0
rect_clip_content = true

[node name="Primary" type="Control" parent="Windows" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -300.0
margin_bottom = -40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="ColorRect" type="ColorRect" parent="Windows/Primary" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Secondary" type="Control" parent="Windows" index="3"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_bottom = -400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ColorRect" type="ColorRect" parent="Windows/Secondary" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.886275, 0.0588235, 0.0588235, 1 )
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Tertiary" type="Control" parent="Windows" index="4"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = 200.0
margin_bottom = -200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ColorRect" type="ColorRect" parent="Windows/Tertiary" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.375582, 0.886275, 0.0588235, 1 )

[node name="TaskBar" parent="." index="3" instance=ExtResource( 6 )]

margin_right = -88.0
_sections_unfolded = [ "Anchor", "Margin" ]


